# image_diffusion

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  urls.txt
configs/: transformer_latent256.yaml  unet_latent256.yaml  validation_prompts.txt
data/: __init__.py  text_cleaning.py  tokenizer.py  webdataset_loader.py
diffusion_image/: __init__.py  checkpointing.py  config.py  distributed.py  ema.py  logging_utils.py  torch_compat.py  vision.py
diffusion_image/diffusion/: __init__.py  betas.py  process.py  sampler.py
metrics/: compute_clip_score.py  compute_fid.py
models/: __init__.py  base.py  builder.py  diffusion_head.py  text_encoder.py  transformer.py  unet.py
scripts/: download_laion_subset.py  encode_latents.py  extract_captions.py  prepare_webdataset.py  sample.py  train_tokenizer.py
tests/: test_smoke.py
tokenizer/: tokenizer.model  tokenizer.vocab  tokenizer_meta.json
train/: train.py
